es-derive2-test/tests/ui/errors/awaits_not_array.rs
// Error: awaits expects array syntax
#[derive(es_derive2::InjectableEvent)]
#[es(awaits = FooEvent, idempotency = ["id"], correlation = ["id"])]
pub struct MyEvent {
    pub id: String,
}

fn main() {}
